Remove usage of deprecates API